# zero-2-prod

./: .env  Cargo.toml  README.md  configuration.yaml
migrations/: 20200903143951_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
