[package]
name = "zero-2-prod"
version = "0.1.0"
authors = ["Thibault Dessarps <dessarps.thibault@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"

[dev-dependencies]
reqwest = "0.10.7"
tokio = "0.2.22"
