[package]
name = "zero-2-prod"
version = "0.1.0"
authors = ["Thibault Dessarps <dessarps.thibault@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = { version = "1.0.115", features = ["derive"]}
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
